--- a/css/personalize.css
+++ b/css/personalize.css
@@ -17,7 +17,7 @@
     transition: 0.5s;
     background-color: #159995;
     color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
     text-decoration: none;
 }
 
