--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,17 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+
+<div>
+    <h1 style="float: left">{{ page.title }}</h1>
+    <img src="{{ site.baseurl }}/assets/home.svg" 
+        height="40px" 
+        style="float: right; margin: 10px"
+        onclick="window.location.href='{{ site.baseurl }}/'"
+    />
+    <img src="{{ site.baseurl }}/assets/back.svg" height="40px" style="float: right; margin: 10px"/>
+</div>
+
+<p class="meta" style="clear: both">  {{ page.date | date_to_string }}</p>
 
 {{ content }}
