--- a/css/personalize.css
+++ b/css/personalize.css
@@ -1,6 +1,5 @@
 .card {
     /* Add shadows to create the "card" effect */
-    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     padding: 10px;
     cursor:pointer;
@@ -15,8 +14,8 @@
 /* On mouse-over, add a deeper shadow */
 .card:hover {
     transition: 0.5s;
-    background-color: #027bd8;
-    color: rgba(255, 255, 255, 0.9);
+    background-color: #2c4fc3;
+    color: #fffffff1;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
 }
 
@@ -31,4 +30,26 @@
   justify-content: center;
   align-items: flex-start;
   align-content: flex-start;
+}
+
+/* Notification Block CSS */
+.notification{
+  background-color: rgb(250, 247, 194);
+  padding: 8px 16px 8px 16px;
+  margin: 16px 0px 16px 0px;
+  /* Orange Bar on the Left */
+  border-left-style: solid;
+  border-left-width: 8px;
+  border-left-color:rgb(255, 216, 109);
+}
+
+/* Info Block CSS */
+.info{
+  background-color: rgb(212, 246, 255);
+  padding: 8px 16px 8px 16px;
+  margin: 16px 0px 16px 0px;
+  /* Blue Bar on the Left */
+  border-left-style: solid;
+  border-left-width: 8px;
+  border-left-color:rgb(109, 223, 255)
 }
