Schedule Page, upload 3 more USACO Solutions, update USACO Solution Page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,12 +5,12 @@ layout: default
     <h2 style="float: left"><strong>{{ page.title }}</strong></h2>
     <img src="{{ site.baseurl }}/assets/home.svg" 
         height="30px" 
-        style="float: right; margin: 10px"
+        style="float: right; margin: 10px; cursor:pointer;"
         onclick="window.location.href='{{ site.baseurl }}/'"
     />
     <img src="{{ site.baseurl }}/assets/back.svg"
         height="30px"
-        style="float: right; margin: 10px"
+        style="float: right; margin: 10px; cursor:pointer;"
         onclick="window.history.back();"
     />
 </div>
