Update Comment Area Based on Valine Service and LeanCloud, upload 4 USACO Analysis

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,8 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
-
+  <!-- Script Header for valine comment area -->
+  <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
   <!-- Script Header Enable MathJax display -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
   <script type="text/x-mathjax-config">
