--- a/_layouts/usaco-post.html
+++ b/_layouts/usaco-post.html
@@ -19,3 +19,17 @@ layout: default
 <p class="meta" style="clear: both">By: {{ page.author }},  {{ page.date | date_to_string }}</p>
 
 {{ content }}
+
+{% if page.comments != false %}
+    <hr/>
+    <h3>评论区</h3>
+    <div id="vcomments"></div>
+        <script>
+            new Valine({
+                el: '#vcomments',
+                appId: '8fKQHmL2KKgtJSxGo7d3SfGV-gzGzoHsz',
+                appKey: 'YWf5Di35XGX8gboR1cSLKafj',
+                placeholder: '欢迎在这里分享自己的独到见解 : )'
+            })
+    </script>
+{% endif %}
