Update Website Structure, add Head Nav Bar, TOC and Report Error Popup

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,13 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
+  <!-- Script Header for Table of Content Area -->
+  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="http://yandex.st/highlightjs/6.2/highlight.min.js"></script>
+  <script src="{{ site.baseurl }}/css/toc_generator.js"></script>
+  <!-- Script Header for Popup Window -->
+  <script src="{{ site.baseurl }}/css/error_report_popup.js"></script>
   <!-- Script Header for valine comment area -->
   <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
   <!-- Script Header Enable MathJax display -->
