--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div>
-    <h2 style="float: left"><strong>{{ page.title }}</strong></h2>
+    <h2><strong>{{ page.title }}</strong></h2>
     <img src="{{ site.baseurl }}/assets/home.svg" 
         height="30px" 
         style="float: right; margin: 10px; cursor:pointer;"
@@ -14,5 +14,5 @@ layout: default
         onclick="window.history.back();"
     />
 </div>
-<div style="clear: both"></div>
+<p class="meta">  {{ page.date | date_to_string }}</p>
 {{ content }}
