Update Webpage and Popup

--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -1,7 +1,7 @@
 <section class="top-nav-box">
-    <div class="nav-button">For Beginner</div>
+    <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/31/To-Beginners.html'">For Beginner</div>
     <div class="nav-button">Notes</div>
-    <div class="nav-button">Competitions</div>
+    <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/Competitions.html'">Competitions</div>
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html'">All Posts</div>
     <div class="nav-button">More</div>
 </section>
