--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,14 +26,16 @@ comments: false
         onclick="window.history.back();"
     />
 </div>
-<p class="meta">  {{ page.date | date_to_string }}</p>
+<p class="meta">  {{ page.date | date_to_string }}, By {{ page.Author }}</p>
 
 {{ content }}
 
+{% if page.comments != false %}
 <hr/>
+{% endif %}
+
 <div class="warn-button" onclick="showErrorReport()">报告错误</div>
 {% if page.comments != false %}
-    
     <h3>评论区</h3>
     <div id="vcomments"></div>
         <script>
