Update Time Complexity

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,14 +8,18 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
+
   <!-- Script Header for Table of Content Area -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://yandex.st/highlightjs/6.2/highlight.min.js"></script>
   <script src="{{ site.baseurl }}/css/toc_generator.js"></script>
+
   <!-- Script Header for Popup Window -->
   <script src="{{ site.baseurl }}/css/error_report_popup.js"></script>
+
   <!-- Script Header for valine comment area -->
   <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+
   <!-- Script Header Enable MathJax display -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
   <script type="text/x-mathjax-config">
@@ -27,4 +31,12 @@
           }
       });
   </script>
+
+  <!-- Script Header for Code Highlight -->
+  <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/default.min.css" rel="stylesheet">  
+  <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
+  <script >hljs.initHighlightingOnLoad();</script>
+
+  <!-- Script Header for Code Language Selector in Algo Notes -->
+  <script src="{{ site.baseurl }}/css/algorithmLangSelector.js"></script>
 </head>
