More USACO Analysis, Fix URLs, Note Main Page Gets Online

--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 comments: false
+Author: Anonymous
 ---
 <script>window.onload = selectPython</script>
 <div class="popup-black-background" id="popup_01" onclick="hideErrorReport()" style="display: none;"></div>
