--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 comments: false
+Author: Anonymous
 ---
 <div class="popup-black-background" id="popup_01" onclick="hideErrorReport()" style="display: none;"></div>
 <div class="popup-warn-window" id="popup_02" style="display: none;">
