Update Gitee Pages

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/algo_note.css">
 
   <!-- Script Header for Table of Content Area -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
