Sorting Algorithm, improve Algo_note template

--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -36,9 +36,9 @@ Author: Anonymous
 <!-- Language Selector -->
 <div class="info">
     <p>你使用哪种语言？我们会根据你选择的语言显示对应的代码示例</p>
-    <div class="button-box">
-        <div class="main-button" id="pySelector" onclick="selectPython()">Python</div>
-        <div class="main-button" id="javaSelector" onclick="selectJava()">Java</div>
+    <div class="button-box" style="margin-top: -20px;">
+        <div class="main-button" id="pySelector" onclick="selectPython()" style="border-radius: 10px 0 0 10px; margin-right: 0px">Python</div>
+        <div class="main-button" id="javaSelector" onclick="selectJava()" style="border-radius: 0 10px 10px 0; margin-left: 0px">Java</div>
     </div>
 </div>
 
