--- a/css/cayman.css
+++ b/css/cayman.css
@@ -152,48 +152,15 @@ a:hover { text-decoration: underline; }
 @media screen and (min-width: 42em) and (max-width: 64em) { .page-header { padding: 3rem 4rem; } }
 @media screen and (max-width: 42em) { .page-header { padding: 2rem 1rem; } }
 
-
-/*.page-header { color: #fff; text-align: center; background-color: #159957; background-image: linear-gradient(120deg, #152999, #156699); }*/
-.main-page-header {
-  /*color: rgba(36, 48, 117, 0.903);*/
-  color: #fff;
-  height: 100vh;
-  text-align: center;
-  background: url(./header-crop-1.jpeg);
-  background-repeat: no-repeat;
-  background-size:cover;
-}
-@media screen and (min-width: 64em) { .page-header { padding: 5rem 6rem; } }
-@media screen and (min-width: 42em) and (max-width: 64em) { .page-header { padding: 3rem 4rem; } }
-@media screen and (max-width: 42em) { .page-header { padding: 2rem 1rem; } }
-
-.main-header-container{
-  position:absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-}
-
-.project-name { margin-top: 0; margin-bottom: 0.1rem; font-weight: 300;}
+.project-name { margin-top: 0; margin-bottom: 0.1rem; }
 @media screen and (min-width: 64em) { .project-name { font-size: 3.25rem; } }
 @media screen and (min-width: 42em) and (max-width: 64em) { .project-name { font-size: 2.25rem; } }
-@media screen and (max-width: 42em) { .project-name { font-size: 1.25rem; } }
-
-.main-project-name { margin-top: 0; margin-bottom: 2rem; font-weight: 300;}
-@media screen and (min-width: 64em) { .main-project-name { font-size: 4rem; } }
-@media screen and (min-width: 42em) and (max-width: 64em) { .main-project-name { font-size: 3rem; } }
-@media screen and (max-width: 42em) { .main-project-name { font-size: 2rem; } }
+@media screen and (max-width: 42em) { .project-name { font-size: 1.75rem; } }
 
 .project-tagline { margin-bottom: 2rem; font-weight: normal; opacity: 0.7; color:#fff}
 @media screen and (min-width: 64em) { .project-tagline { font-size: 1.5rem; } }
 @media screen and (min-width: 42em) and (max-width: 64em) { .project-tagline { font-size: 1.4rem; } }
 @media screen and (max-width: 42em) { .project-tagline { font-size: 1.25rem; } }
-
-.main-project-tagline { margin-bottom: 25vh; font-weight: normal; opacity: 0.7; color:#fff}
-@media screen and (min-width: 64em) { .main-project-tagline { font-size: 2rem; } }
-@media screen and (min-width: 42em) and (max-width: 64em) { .main-project-tagline { font-size: 1.5rem; } }
-@media screen and (max-width: 42em) { .main-project-tagline { font-size: 1.25rem; } }
-
 
 .main-content { word-wrap: break-word; }
 .main-content :first-child { margin-top: 0; }
