--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -7,7 +7,9 @@ useTOC: true
   {% include head.html %}
   <head>
     <!-- typed.js javascript file -->
-    <script src="{{ site.baseurl }}/js/typed.js-master/lib/typed.min.js"></script>     
+    <script src="https://cdn.bootcdn.net/ajax/libs/typed.js/2.0.9/typed.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/typed.js/2.0.9/typed.min.js"></script>
+    <!--<script src="{{ site.baseurl }}/css/js/typed.js-master/lib/typed.min.js"></script>-->
     <!-- Add jquery cdn -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
