--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,16 +3,15 @@
   <title>{{ site.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#157878">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/algo_note.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/algo_note.css" rel="stylesheet">
 
   <!-- Script Header for Table of Content Area -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script src="http://yandex.st/highlightjs/6.2/highlight.min.js"></script>
   <script src="{{ site.baseurl }}/css/toc_generator.js"></script>
 
   <!-- Script Header for Popup Window -->
@@ -34,8 +33,8 @@
   </script>
 
   <!-- Script Header for Code Highlight -->
-  <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/default.min.css" rel="stylesheet">  
-  <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
+  <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/a11y-light.min.css" rel="stylesheet">
+  <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
   <script >hljs.initHighlightingOnLoad();</script>
 
   <!-- Script Header for Code Language Selector in Algo Notes -->
