--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -11,7 +11,7 @@ useTOC: true
     <script src="https://cdn.bootcdn.net/ajax/libs/typed.js/2.0.9/typed.min.js"></script>
     <!--<script src="{{ site.baseurl }}/css/js/typed.js-master/lib/typed.min.js"></script>-->
     <!-- Add jquery cdn -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <style>
     /* Main Page Down Arrow Floating */
