--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -3,5 +3,5 @@
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/03/04/notes.html'">笔记</div>
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/Competitions.html'">竞赛</div>
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html'">页面汇总</div>
-    <div class="nav-button">更多</div>
+    <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/About-Us.html'">关于我们</div>
 </section>
