--- a/css/personalize.css
+++ b/css/personalize.css
@@ -40,6 +40,35 @@
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
 }
 
+.center-card-box{
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.round-card{
+    /* Add shadows to create the "card" effect */
+    transition: 0.3s;
+    padding: 10px;
+    cursor:pointer;
+    text-align: center;
+    transition: 0.5s;
+    color: #13227a;
+    border-radius: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    /* flex properties */
+    flex-grow: 0;
+    flex-basis: 250px;
+}
+
+.round-card:hover {
+  transition: 0.5s;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
+}
 
 /* A Flex Container */
 .card-box{
