Update ACSL Note and Algo Note

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
   </script>
 
   <!-- Script Header for Code Highlight -->
-  <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/a11y-light.min.css" rel="stylesheet">
+  <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/a11y-dark.min.css" rel="stylesheet">
   <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
   <script >hljs.initHighlightingOnLoad();</script>
 
