--- a/css/normalize.css
+++ b/css/normalize.css
@@ -416,9 +416,19 @@ optgroup {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+  margin:0 auto;
 }
 
 td,
 th {
   padding: 0;
+}
+
+tr{
+  background-color: transparent;
+  transition: 0.5s;
+}
+tr:hover{
+  background-color: rgba(238, 238, 238, 0.4);
+  transition: 0.5s;
 }
