Update Copyright, Update Webpage Documentation, Update Header, Update Index to remove alpha flag

--- a/_includes/page-toc.html
+++ b/_includes/page-toc.html
@@ -22,6 +22,6 @@
         $(".book-body").html($(".book-body").nextAll())
     });
 </script>
-<div class="book-summary" id="category" style="width:20%;">
+<div class="book-summary" id="category">
   <strong>目录</strong><br/>
 </div>
