--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,7 +1,7 @@
 <section class="page-header">
-  <h1 class="project-name">{{ site.title }}</h1>
+  <img src="{{ site.baseurl }}\css\header-black.png" height="50%" width="50%" style="display:block; margin: 0 auto 0 auto;"/>
+  <!--<h1 class="project-name">{{ site.title }}</h1>-->
   <h1 class="project-tagline">{{ site.tagline }}</h1>
-  <!--<a href="#" class="btn">View on GitHub</a>
-  <a href="#" class="btn">Download .zip</a>
+  <!--<a href="#" class="btn">Download .zip</a>
   <a href="#" class="btn">Download .tar.gz</a>-->
 </section>
