--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -34,13 +34,13 @@ Author: Anonymous
 <div style="clear:right"></div>
 
 <!-- Language Selector -->
-<div class="info">
+<blockquote>
     <p>你使用哪种语言？我们会根据你选择的语言显示对应的代码示例</p>
     <div class="button-box" style="margin-top: -20px;">
         <div class="main-button" id="pySelector" onclick="selectPython()" style="border-radius: 10px 0 0 10px; margin-right: 0px">Python</div>
         <div class="main-button" id="javaSelector" onclick="selectJava()" style="border-radius: 0 10px 10px 0; margin-left: 0px">Java</div>
     </div>
-</div>
+</blockquote>
 
 {{ content }}
 
