Add Feature - Website Searcher

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,10 +12,10 @@
 
   <!-- Script Header for Table of Content Area -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script src="{{ site.baseurl }}/css/toc_generator.js"></script>
+  <script src="{{ site.baseurl }}/js/toc_generator.js"></script>
 
   <!-- Script Header for Popup Window -->
-  <script src="{{ site.baseurl }}/css/error_report_popup.js"></script>
+  <script src="{{ site.baseurl }}/js/error_report_popup.js"></script>
 
   <!-- Script Header Enable MathJax display -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
@@ -35,5 +35,5 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   <!-- Script Header for Code Language Selector in Algo Notes -->
-  <script src="{{ site.baseurl }}/css/algorithmLangSelector.js"></script>
+  <script src="{{ site.baseurl }}/js/algorithmLangSelector.js"></script>
 </head>
