--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -2,6 +2,6 @@
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/31/To-Beginners.html'">初学者指南</div>
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/03/04/notes.html'">笔记</div>
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/Competitions.html'">竞赛</div>
-    <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html'">页面汇总</div>
+    <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/04/12/Search.html'">页面搜索</div>
     <div class="nav-button" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/01/26/About-Us.html'">关于我们</div>
 </section>
