--- a/css/search.css
+++ b/css/search.css
@@ -14,5 +14,7 @@ ul[id="results-container"] li{
 
 ul[id="results-container"]{
     font-size: 1.2rem;
+    color: #901d1d;
     min-height: 25rem;
+    padding: 0.7rem 0 0 0;
 }
